animation overflow issue solved 1/2: grijze band al OK, nu nog kleurborder

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -67,6 +67,17 @@ body {
     overflow: hidden;
 }
 
+.bg_border {
+    box-sizing: border-box;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    background-color: transparent;
+    border: 20px solid yellow;
+}
+
 /*
 .white_border {
     box-sizing: border-box;
